<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">

    <!-- User Name -->

    <TextView
        android:id="@+id/expense_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />
    <!-- Expense Records starts -->

    <ImageView
        android:id="@+id/expense_image"
        android:layout_width="wrap_content"
        android:layout_height="20dip"
        android:layout_below="@id/expense_user"
        android:layout_marginRight="4dip"
        android:layout_toLeftOf="@+id/expense_label"
        android:contentDescription="@string/icon_desc"
        android:src="@drawable/expense" />

    <TextView
        android:id="@+id/expense_label"
        android:layout_width="70dip"
        android:layout_height="20dip"
        android:layout_below="@id/expense_user"
        android:layout_marginRight="2dip"
        android:layout_toLeftOf="@+id/expense_amount"
        android:text="@string/expense"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="sans" />

    <TextView
        android:id="@+id/expense_amount"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/expense_user"
        android:layout_marginRight="5dip"
        android:gravity="right"
        android:text="@string/loading"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans" />
    <!-- Expense Records Ends -->
    <!-- Offering Records starts -->

    <ImageView
        android:id="@+id/offering_image"
        android:layout_width="wrap_content"
        android:layout_height="20dip"
        android:layout_below="@id/expense_image"
        android:layout_marginRight="4dip"
        android:layout_toLeftOf="@+id/offering_label"
        android:contentDescription="@string/icon_desc"
        android:src="@drawable/offering" />

    <TextView
        android:id="@+id/offering_label"
        android:layout_width="70dip"
        android:layout_height="20dip"
        android:layout_below="@id/expense_label"
        android:layout_marginRight="2dip"
        android:layout_toLeftOf="@+id/offering_amount"
        android:text="@string/offering"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="sans" />

    <TextView
        android:id="@+id/offering_amount"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/expense_amount"
        android:layout_marginRight="5dip"
        android:gravity="right"
        android:text="@string/loading"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans" />
    <!-- Offering Records Ends -->

</RelativeLayout>